# zarray

./: .travis.yml  CMakeLists.txt  README.md  environment-dev.yml  zarrayConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux-clang.yml  azure-pipelines-linux-gcc.yml  unix-build.yml
doctest/: CMakeLists.txt  main.cpp  test_init.cpp  test_zarray.cpp  test_zchunked_array.cpp  test_zfunction.cpp  test_zview.cpp  testutil.hpp
include/zarray/: zarray.hpp  zarray_buffer_handler.hpp  zarray_buffer_manager.hpp  zarray_config.hpp  zarray_impl.hpp  zarray_impl_register.hpp  zarray_wrapper.hpp  zarray_zarray.hpp  zassign.hpp  zchunked_wrapper.hpp  zdispatcher.hpp  zdispatching_types.hpp  zexpression_wrapper.hpp  zfunction.hpp  zinit.hpp  zmath.hpp  zreducer.hpp  zreducer_options.hpp  zreducers.hpp  zscalar_wrapper.hpp  zview.hpp
test/: CMakeLists.txt  test_chunked.cpp  test_common.hpp  test_common_macros.hpp  test_init.hpp  test_reducer.cpp  test_utils.hpp  test_view.cpp  test_zarray.cpp  test_zchunked_array.cpp  test_zexpression_tree.cpp  test_zfunction.cpp  test_zreducer.cpp  test_zreducer_minmax.cpp  test_zreducer_norms.cpp  test_zreducer_options.cpp  test_zreducer_statistics.cpp  test_zview.cpp
